--- a/book/book-1.html
+++ b/book/book-1.html
@@ -16,7 +16,6 @@
       </ul>
     </nav>
     <h1>HTML</h1>
-    <h2>Игорь Шапашников</h2>
   </header>
   <article>
     <section>
@@ -60,7 +59,8 @@
       прежде всего, свобода и право на самовыражение, но для того, чтобы вос-
       пользоваться этими преимуществами, следует освоить соответствующие тех-
       нологии. Мы уже говорили, что для Всемирной паутины база и основа -
-      язык HTML.
+      язык HTML.table  тег используется для создания таблиц в HTML. aтег используется для создания гиперссылок в HTML.
+      Теги, атрибуты и текстовое содержимое основные компоненты включает в себя язык разметки HTML
     </p>
 
     </section>
