--- a/book/book-2.html
+++ b/book/book-2.html
@@ -15,15 +15,40 @@
         <li><a href="./quizz/quizz-2.html">Тест</a></li>
       </ul>
     </nav>
-    <h1>HTML</h1>
-    <h2>Игорь Шапашников</h2>
+    <h1>CSS (Cascading Style Sheets)</h1>
   </header>
   <article>
     <section>
       <p>
-        2 Книга</p>
+        CSS (Cascading Style Sheets) - это язык стилей,
+         используемый для оформления веб-страниц. С помощью CSS можно определять внешний 
+         вид элементов HTML, таких как текст, изображения, разметка и другие элементы. 
+         Он позволяет разработчикам создавать красивые, современные и адаптивные веб-сайты.</p>
     <br>
-      <p> информация о книге</p>
+      <p>Основные возможности CSS включают в себя определение цвета текста и фона, 
+        выбор шрифтов и их размеров, задание отступов, рамок и полей, а также создание анимаций 
+        и эффектов перехода. CSS также позволяет создавать адаптивный дизайн, который автоматически 
+        подстраивается под разные размеры экранов устройств, что делает веб-сайты удобными для
+         использования на компьютерах, планшетах и мобильных телефонах.
+
+        Одной из ключевых особенностей CSS является каскадирование стилей, 
+        которое позволяет определить приоритетность применения различных стилей к 
+        элементам веб-страницы. Это позволяет легко изменять внешний вид веб-сайта,
+         избегая необходимости внесения изменений в HTML-код.
+        
+        CSS является фундаментальным инструментом веб-разработки и играет ключевую роль 
+        в создании уникального и привлекательного пользовательского опыта в Интернете. </p>
+        <p>
+          Дополнительно, CSS предоставляет возможность использовать различные селекторы для 
+          точного выбора элементов на веб-странице, что делает стилизацию более гибкой и эффективной. Эти селекторы могут быть основаны на классах, идентификаторах, типах элементов и их состояниях, что позволяет применять стили к определенным частям страницы или к элементам в зависимости от их текущего состояния или контекста.
+
+            Благодаря возможности создания медиа-запросов, CSS также обеспечивает адаптивность веб-дизайна, 
+            позволяя определять различные стили в зависимости от характеристик устройства, таких как ширина 
+            экрана, ориентация и плотность пикселей. Это позволяет создавать мобильные версии веб-сайтов, которые оптимизированы для просмотра на устройствах с маленькими экранами, сохраняя при этом удобство использования.
+
+            Большое преимущество CSS также заключается в возможности использования вложенности и наследования
+            стилей, что позволяет эффективно управлять стилями на больших и сложных веб-сайтах. Это способствует повторному использованию кода и упрощает его обслуживание.
+        </p>
 
 
     </section>
