--- a/book/book-3.html
+++ b/book/book-3.html
@@ -21,9 +21,32 @@
   <article>
     <section>
       <p>
-        3 Книга</p>
+        JavaScript - это высокоуровневый, интерпретируемый язык программирования,
+         который широко используется для создания динамических и интерактивных веб-сайтов.
+          Он позволяет добавлять различные функциональные возможности на веб-страницы, 
+          такие как анимации, обработка событий, валидация форм,
+         динамическое обновление содержимого страницы без перезагрузки и многое другое.</p>
     <br>
-    <p> информация о книге</p>
+    <p>  Он позволяет добавлять динамическое поведение на страницы, обрабатывать 
+      события пользователя, а также манипулировать содержимым и стилями HTML-документов.
+       JavaScript легко изучить благодаря своему простому синтаксису и широкой поддержке
+        веб-браузерами. Его особенности включают динамическую типизацию, возможность работы 
+        с объектной моделью документа (DOM), асинхронное выполнение кода и модульную структуру. 
+        JavaScript активно применяется не только в веб-разработке,
+       но и в создании мобильных приложений, игр, серверного программирования и других областях.</p>
+       <p>
+        JavaScript предоставляет разработчикам множество инструментов для 
+        создания динамических и интерактивных пользовательских интерфейсов. 
+        Он позволяет создавать анимации, валидировать формы, отправлять асинхронные запросы на
+         сервер и обрабатывать полученные данные без перезагрузки страницы. Благодаря возможности 
+         работы с событиями пользовательского взаимодействия, JavaScript позволяет создавать реактивные
+          и отзывчивые веб-приложения, что повышает их удобство использования для конечных пользователей. Богатство функциональных возможностей и широкое распространение делают JavaScript неотъемлемым 
+        компонентом современной веб-разработки, стимулируя его постоянное развитие и улучшение.
+
+        В JavaScript нету типа данных Дата (Date). В JavaScriptсипользуют медиа-запросы для 
+        изменения стилей и поведения в зависимости 
+        от характеристик устройства, таких как ширина экрана и ориентация.
+       </p>
 
 
     </section>
