--- a/book/book-4.html
+++ b/book/book-4.html
@@ -15,15 +15,42 @@
         <li><a href="./quizz/quizz-4.html">Тест</a></li>
       </ul>
     </nav>
-    <h1>HTML</h1>
-    <h2>Игорь Шапашников</h2>
+    <h1>SQL (Structured Query Language)</h1>
   </header>
   <article>
     <section>
       <p>
-       4 Книга .</p>
+        SQL (Structured Query Language) - это язык программирования, используемый для работы 
+        с реляционными базами данных. Он предоставляет возможность создания, изменения и 
+        управления данными в базах данных, 
+        а также выполнения различных операций, таких как выборка, вставка, обновление и 
+          удаление записей.</p>
     <br>
-    <p> информация о книге</p>
+    <p> SQL, или Structured Query Language, имеет богатую историю, начиная с конца 1970-х годов, 
+      когда IBM разработала язык SEQUEL (Structured English Query Language) для работы с их 
+      реляционной базой данных System R. Впоследствии язык был переименован в SQL из-за проблем 
+      с торговыми марками.
+
+      С течением времени SQL стал стандартом для работы с 
+      реляционными базами данных и получил поддержку от множества крупных компаний и организаций,
+      включая ANSI (American National Standards Institute) и ISO (International Organization for 
+      Standardization), 
+      которые утвердили стандарт SQL в 1986 году.</p>
+
+      <p>
+        С развитием технологий баз данных SQL также развивался. В различные 
+        моменты времени появлялись новые версии стандарта SQL с расширенными возможностями и улучшенной функциональностью, такие как SQL-92, SQL:1999, SQL:2003 и последующие.
+
+        С развитием интернета и распространением веб-приложений SQL стал неотъемлемой частью веб-разработки, поскольку обеспечивает возможность эффективно управлять данными, хранящимися на сервере. Он используется в широком спектре веб-технологий, включая базы данных MySQL, 
+        PostgreSQL, Microsoft SQL Server, Oracle и другие.
+      </p>
+      <p>
+        Сегодня SQL продолжает оставаться одним из наиболее важных и широко используемых языков 
+        программирования в области баз данных, играя ключевую роль в разработке и поддержке 
+        приложений, которые требуют эффективного хранения, управления и доступа к данным.SQL играет в роль в веб-разработке для 
+        добавление динамического поведения и управление данными в базах данных.ISO (International Organization for Standardization) и ANSI (American National Standards Institute) 
+        утверидло SQL как стандарт. DOM в SQL используют для манипуляции структурой HTML-документов на веб-странице.
+      </p>
 
 
     </section>
