--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="main-content">
-  <h1>4 ПОПУЛЯРНЫХ КНИГ НА ТЕМУ КВАНТОВАЯ ФИЗИКА<small>Наведите курсор на любую книжку и нажмите...</small></h1>
+  <h1>ОСНОВЫ ВЕБ ПРОГРАММИРОВАНИЯ</h1>
   <div class="moleskine-wrapper">
     <div class="moleskine-notebook">
       <div class="notebook-cover">
@@ -19,34 +19,34 @@
       </div>
       <div class="notebook-page"></div>
     </div>
-    <h4>Игорь Шапашников</h4>
+    <h4>ГЛАВА - 1</h4>
   </div>
   <div class="moleskine-wrapper">
     <div class="moleskine-notebook">
       <div class="notebook-cover blue">
-        <div class="notebook-skin"><a href="./book/book-2.html">КНИГА - 2</a></div>
+        <div class="notebook-skin"><a href="./book/book-2.html">CSS</a></div>
       </div>
       <div class="notebook-page ruled"></div>
     </div>
-    <h4>Линейка</h4>
+    <h4>ГЛАВА - 2</h4>
   </div>
   <div class="moleskine-wrapper">
     <div class="moleskine-notebook">
       <div class="notebook-cover yellow">
-        <div class="notebook-skin"><a href="./book/book-3.html">КНИГА - 3</a></div>
+        <div class="notebook-skin"><a href="./book/book-3.html">JavaScript</a></div>
       </div>
       <div class="notebook-page squared"></div>
     </div>
-    <h4>Клетка</h4>
+    <h4>ГЛАВА - 3</h4>
   </div>
   <div class="moleskine-wrapper">
     <div class="moleskine-notebook">
       <div class="notebook-cover green">
-        <div class="notebook-skin"><a href="./book/book-4.html">КНИГА - 4</a></div>
+        <div class="notebook-skin"><a href="./book/book-4.html">SQL</a></div>
       </div>
       <div class="notebook-page dotted"></div>
     </div>
-    <h4>Точки</h4>
+    <h4>ГЛАВА - 4</h4>
   </div>
 </div>
 <!-- partial -->
