--- a/book/quizz/quizz-3.html
+++ b/book/quizz/quizz-3.html
@@ -29,7 +29,7 @@
             <div class="info">5. Вы будете получать баллы за свои правильные ответы.</div>
         </div>
         <div class="buttons">
-            <button class="quit">Закрыть тест</button>
+            <button class="quit">Закрыть</button>
             <button class="restart">Продолжить</button>
         </div>
     </div>
@@ -39,7 +39,7 @@
         <header>
             <div class="title">Тест</div>
             <div class="timer">
-                <div class="time_left_txt">Времени осталось</div>
+                <div class="time_left_txt">Время</div>
                 <div class="timer_sec">15</div>
             </div>
             <div class="time_line"></div>
